<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="4dp"
    app:cardCornerRadius="4dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:id="@+id/cardTxtTaskName"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="50dp" />

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/btnStartTask"
                android:src="@android:drawable/ic_media_play"
                android:layout_alignBottom="@+id/cardImgView"
                android:layout_toEndOf="@+id/cardImgView" />

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/btnEditTask"
                android:src="@android:drawable/ic_menu_edit"
                android:contentDescription="@string/edit_task"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/btnDeleteTask"
                android:src="@android:drawable/ic_delete"
                android:layout_alignTop="@+id/btnStartTask"
                android:layout_toEndOf="@+id/btnStartTask" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:id="@+id/cardTxtTaskDetail"
            android:layout_below="@+id/cardTxtTaskName"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/linearLayout"
            android:textSize="15sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:id="@+id/btnConcluir"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</android.support.v7.widget.CardView>