<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_centerVertical="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.NewTaskActivity"
    tools:showIn="@layout/activity_new_task"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:src="@drawable/tec_pomodoro"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:id="@+id/lblTaskName"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTaskName"
        android:layout_below="@+id/lblTaskName"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:layout_marginTop="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_detail"
        android:id="@+id/lblTaskDetail"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtTaskName"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTaskDetail"
        android:layout_below="@+id/lblTaskDetail"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:layout_marginTop="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_pomo_quantity"
        android:id="@+id/lblPomoQuantity"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPomoQuantity"
        android:textSize="15sp"
        android:inputType="number"
        android:layout_below="@+id/lblPomoQuantity"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSaveTask"
        android:theme="@style/PomoRedButton"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/txtPomoQuantity"
        android:layout_alignEnd="@+id/txtPomoQuantity"
        android:layout_gravity="right" />

</LinearLayout>
